main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "6.20.0"
    }
  }
}

provider "aws" {
  region = "eu-west-2"
}

resource "aws_vpc" "tf_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "Techcorp-vpc"
  }
}

resource "aws_subnet" "tf_subnet_public1" {
  vpc_id     = aws_vpc.tf_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "eu-west-2a"

  tags = {
    Name = "Techcorp-Public-Subnet-1"
  }
}

resource "aws_subnet" "tf_subnet_public2" {
  vpc_id     = aws_vpc.tf_vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "eu-west-2b"

  tags = {
    Name = "Techcorp-Public-Subnet-2"
  }
}

resource "aws_subnet" "tf_subnet_private1" {
  vpc_id     = aws_vpc.tf_vpc.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "eu-west-2a"

  tags = {
    Name = "Techcorp-private-subnet-1"
  }
}

resource "aws_subnet" "tf_subnet_private2" {
  vpc_id     = aws_vpc.tf_vpc.id
  cidr_block = "10.0.4.0/24"
  availability_zone = "eu-west-2b"

  tags = {
    Name = "Techcorp-private-subnet-2"
  }
}

resource "aws_internet_gateway" "tf_gw" {
  vpc_id = aws_vpc.tf_vpc.id

  tags = {
    Name = "Techcorp-Internet-Gateway"
  }
}

resource "aws_eip" "nat" {
  tags = {
    Name = "Techcorp-NAT-EIP"
  }
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.tf_subnet_public1.id

  tags = {
    Name = "Techcorp-NAT-GW"
  }

  depends_on = [aws_internet_gateway.tf_gw]
}

resource "aws_route_table" "tf_rt" {
  vpc_id = aws_vpc.tf_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tf_gw.id
  }

  tags = {
    Name = "Techcorp-Public-RT"
  }
}

resource "aws_route_table_association" "public_rta1" {
  subnet_id      = aws_subnet.tf_subnet_public1.id
  route_table_id = aws_route_table.tf_rt.id
}

resource "aws_route_table_association" "public_rta2" {
  subnet_id      = aws_subnet.tf_subnet_public2.id
  route_table_id = aws_route_table.tf_rt.id
}

resource "aws_route_table" "tf_private_rt" {
  vpc_id = aws_vpc.tf_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw.id
  }

  tags = {
    Name = "Techcorp-Private-RT"
  }
}

resource "aws_route_table_association" "private_rta1" {
  subnet_id      = aws_subnet.tf_subnet_private1.id
  route_table_id = aws_route_table.tf_private_rt.id
}

resource "aws_route_table_association" "private_rta2" {
  subnet_id      = aws_subnet.tf_subnet_private2.id
  route_table_id = aws_route_table.tf_private_rt.id
}
